# rhea-cli

./: .gitignore  README.md  pyproject.toml  rhea-cli-0.1.0.r6.g75d570b-1-any.pkg.tar.zst
.github/workflows/: ci.yml  package-drift.yml  release.yml  weekly-rebuild.yml
src/rhea_cli/: archive.py  cli.py  client.py  columns.py  core.py  sparql.py
tests/: test_cli.py  test_core.py
