[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rhea-cli"
version = "0.1.0"
description = "Rhea REST and download API CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"

[project.scripts]
rhea = "rhea_cli.cli:main"

[project.urls]
Homepage = "https://github.com/decent-tools-for-thought/rhea-cli"
Repository = "https://github.com/decent-tools-for-thought/rhea-cli"
Issues = "https://github.com/decent-tools-for-thought/rhea-cli/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.2",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
files = ["src/rhea_cli"]
strict = true
warn_unused_ignores = true
